# looser

./: BuildingWidget.cpp  BuildingWidget.h  CMakeLists.txt  CoeffWidget.cpp  CoeffWidget.h  Floor.cpp  Floor.h  MainWindow.cpp  MainWindow.h  OverviewWidget.cpp  OverviewWidget.h  README.md  Room.cpp  Room.h  RoomGeneral.ui  RoomTree.cpp  RoomTree.h  RoomWTable.cpp  RoomWTable.h  RoomWidget.cpp  RoomWidget.h  looserdefs.h  main.cpp
